MA 3-7 and the html stubs have been updated so they render properly.

--- a/_data/translation/MA_002_en_Parijata_Tree.yaml
+++ b/_data/translation/MA_002_en_Parijata_Tree.yaml
@@ -1,4 +1,4 @@
-collection: The Middle-Length Discourses
+collection: The Medium Discourses
 number: 2
 title: The Pārijāta Tree
 translator: Charles Patton
