--- a/_data/translation/MA_005_ch_Wood_Pile_Parable.yaml
+++ b/_data/translation/MA_005_ch_Wood_Pile_Parable.yaml
@@ -1,100 +1,147 @@
 collection: 中阿含經
 number: '五'
 title: 木積喻經
-paragraphs:
-  - taishoref: '0425a16'
-    content: '我聞如是：一時，佛遊拘薩羅，在人間，與大比丘眾翼從而行。'
-  - taishoref: '~0425a16'
-    content: '爾時，世尊則於中路，忽見一處有大木積，洞燃俱熾，世尊見已，便下道側，更就餘樹敷尼師[6]檀，結[7]加趺坐。'
-  - taishoref: '0425a20'
-    content: '世尊坐已，告諸比丘：「汝等見彼有大木積洞燃俱熾耶？」'
-  - taishoref: '0425a21'
-    content: '時，諸比丘答曰：「見也。世尊！」'
-  - taishoref: '0425a21'
-    content: '[8]世尊復告諸比丘曰：「於[9]汝意云何？[10]謂大木積洞燃俱熾，若抱、若坐、若臥，謂剎利女，梵志、居士、工師女，年在盛時，沐浴香薰，著明淨衣，華鬘、瓔珞嚴飾其身，若抱、若坐、若臥，何者為樂？」'
-  - taishoref: '0425a26'
-    content: '時，諸比丘白曰：「世尊！謂大木積洞燃俱熾，若抱、若坐、若臥，甚苦。世尊！謂剎利女，梵志、居士、工師女，年在盛時，沐浴香薰，著明淨衣，華鬘、瓔珞嚴飾其身，若抱、若坐、若臥，甚樂。世尊！」'
-  - taishoref: '0425b01'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧抱木積洞燃俱熾，若坐、若臥，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0425b01'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門；'
-  - taishoref: '~0425b01'
-    content: '若抱剎利女，梵志、居士、工師女，年在盛時，沐浴香薰，著明淨衣，華鬘、瓔珞嚴飾其身，若坐、若臥者，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0425b01'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
-  - taishoref: '0425b15'
-    content: '世尊復告諸比丘曰：「於意云何？若有力士以緊索毛繩絞勒其[11]𨄔斷皮，斷皮已斷肉，斷肉已斷筋，斷筋已斷骨，斷骨已至髓而住，若從剎利、梵志、居士、工師受其信施，按摩身體、支節、手足，何者為樂？」'
-  - taishoref: '0425b19'
-    content: '時，諸比丘白曰：「世尊！若有力士以緊索毛繩絞勒其[＊]𨄔斷皮，斷皮已斷肉，斷肉已斷筋，斷筋已斷骨，斷骨已至髓而住，甚苦。世尊！若從剎利、梵志、居士、工師受其信施，按摩身體、支節、手足，甚樂。世尊！」'
-  - taishoref: '0425b24'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以緊索毛繩絞勒其[＊]𨄔斷皮，斷皮已斷肉，斷肉已斷筋，斷筋已斷骨，斷骨已至髓而住，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0425b24'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
-  - taishoref: '~0425b24'
-    content: '從剎利、梵志、居士、工師受其信施，按摩身體、支節、手足，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0425b24'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
-  - taishoref: '0425c10'
-    content: '世尊復告諸比丘曰：「於意云何？若有力士以瑩磨利刀截斷其髀，若從剎利、梵志、居士、工師受信施、禮拜，恭敬將迎，何者為樂？」'
-  - taishoref: '0425c13'
-    content: '時，諸比丘白曰：「世尊！若有力士以瑩磨利刀截斷其髀，甚苦。世尊！若從剎利、[12]梵志、居士、工師受信施、禮拜，恭敬將迎，甚樂。世尊！」'
-  - taishoref: '0425c16'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以瑩磨利刀截斷其髀，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0425c16'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
-  - taishoref: '~0425c16'
-    content: '從剎利、梵志、居士、工師受信施、禮拜，恭敬將迎，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0425c16'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。當作是學。」'
-  - taishoref: '0425c29'
-    content: '世尊復告諸比丘曰：「於意云何？若有力士以鐵銅鍱洞燃俱熾，纏絡其身，若從剎利、梵志、居士、工師受信施衣服，何者為樂？」'
-  - taishoref: '0426a03'
-    content: '時，諸比丘白曰：「世尊！若有力士以鐵銅鍱洞燃俱熾，纏絡其身，甚苦。世尊！若從剎利、梵志、居士、工師受信施衣服，甚樂。世尊！」'
-  - taishoref: '0426a06'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以鐵銅鍱洞燃俱熾，纏絡其身，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0426a06'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
-  - taishoref: '~0426a06'
-    content: '從剎利、梵志、居士、工師受信施衣服，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0426a06'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
-  - taishoref: '0426a19'
-    content: '世尊復告諸比丘曰：「於意云何？若有力士以熱鐵[1]鉗鉗開其口，便以鐵丸洞燃俱熾，著其口中，彼熱鐵丸燒脣，燒脣已燒舌，燒舌已燒齗，燒齗已燒咽，燒咽已燒心，燒心已燒腸胃，燒腸胃已下過，若從剎利、梵志、居士、工師受信施食無量眾味，何者為樂？」'
-  - taishoref: '0426a25'
-    content: '時，諸比丘白曰：「世尊！若有力士以熱鐵[＊]鉗鉗開其口，便以鐵丸洞燃俱熾，著其口中，彼熱鐵丸燒脣，燒脣已燒舌，燒舌已燒齗，燒齗已燒咽，燒咽已燒心，燒心已燒腸胃，燒腸胃已下過，甚苦。世尊！若從剎利、梵志、居士、工師受信施食無量眾味，甚樂。世尊！」'
-  - taishoref: '0426b02'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以熱鐵鉗鉗開其口，便以鐵丸洞燃俱熾，著其口中，彼熱鐵丸燒脣，燒脣已燒舌，燒舌已燒齗，燒齗已燒咽，燒咽已燒心，燒心已燒腸胃，燒腸胃已下過，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0426b02'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
-  - taishoref: '~0426b02'
-    content: '從剎利、梵志、居士、工師受信施食無量眾味，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0426b02'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
-  - taishoref: '0426b19'
-    content: '世尊復告諸比丘曰：「於意云何？若有力士以鐵銅床洞燃俱熾，強逼使人坐臥其上，若從剎利、梵志、居士、工師受其信施床㯓臥具，何者為樂？」'
-  - taishoref: '0426b22'
-    content: ' 時，諸比丘白曰：「世尊！若有力士以鐵銅床洞燃俱熾，強逼使人坐臥其上，甚苦。世尊！若從剎利、梵志、居士、工師受其信施床㯓臥具，甚樂。世尊！」'
-  - taishoref: '0426b25'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以鐵銅床洞燃俱熾，強逼使人坐臥其上，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0426b25'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
-  - taishoref: '~0426b25'
-    content: '從剎利、梵志、居士、工師受其信施床㯓臥具，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0426b25'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
-  - taishoref: '0426c10'
-    content: '世尊復告諸比丘曰：「於意云何？若有力士以大鐵銅釜洞燃俱熾，撮舉人已，倒著釜中，若從剎利、梵志、居士、工師受信施房舍，泥治堊灑，窻戶牢密，爐火[2]熅暖，何者為樂？」'
-  - taishoref: '0426c14'
-    content: '時，諸比丘白曰：「世尊！若有力士以大鐵銅釜洞燃俱熾，撮舉人已，倒著釜中，甚苦。世尊！若從剎利、梵志、居士、工師受信施房舍，泥治堊灑，窻戶牢密，爐火[＊]熅暖，甚樂。世尊！」'
-  - taishoref: '0426c18'
-    content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以大鐵銅釜洞燃俱熾，撮舉人已，倒著釜中，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
-  - taishoref: '~0426c18'
-    content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
-  - taishoref: '~0426c18'
-    content: '從剎利、梵志、居士、工師受信施房舍，泥治堊灑，窻戶牢密，爐火[＊]熅暖，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
-  - taishoref: '~0426c18'
-    content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人[1]信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
-  - taishoref: '0427a03'
-    content: '說此法時，六十比丘漏盡結解，六十比丘捨戒還家。所以者何？世尊教[2]誡甚深、甚難，學道亦復甚深、甚難。'
-  - taishoref: '0427a05'
-    content: '佛說如是。彼諸比丘聞佛所說，歡喜奉行。'
+sections:
+  - paragraphs:
+    - taishoref: '0425a16'
+      content: '我聞如是：一時，佛遊拘薩羅，在人間，與大比丘眾翼從而行。'
+  - paragraphs:
+    - taishoref: '~0425a16'
+      content: '爾時，世尊則於中路，忽見一處有大木積，洞燃俱熾，世尊見已，便下道側，更就餘樹敷尼師[6]檀，結[7]加趺坐。'
+  - paragraphs:
+    - taishoref: '0425a20'
+      content: '世尊坐已，告諸比丘：「汝等見彼有大木積洞燃俱熾耶？」'
+    - taishoref: '0425a21'
+      content: '時，諸比丘答曰：「見也。世尊！」'
+  - paragraphs:
+    - taishoref: '0425a21'
+      content: '[8]世尊復告諸比丘曰：「於[9]汝意云何？[10]謂大木積洞燃俱熾，若抱、若坐、若臥，謂剎利女，梵志、居士、工師女，年在盛時，沐浴香薰，著明淨衣，華鬘、瓔珞嚴飾其身，若抱、若坐、若臥，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0425a26'
+      content: '時，諸比丘白曰：「世尊！謂大木積洞燃俱熾，若抱、若坐、若臥，甚苦。世尊！謂剎利女，梵志、居士、工師女，年在盛時，沐浴香薰，著明淨衣，華鬘、瓔珞嚴飾其身，若抱、若坐、若臥，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0425b01'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧抱木積洞燃俱熾，若坐、若臥，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0425b01'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門；'
+  - paragraphs:
+    - taishoref: '~0425b01'
+      content: '若抱剎利女，梵志、居士、工師女，年在盛時，沐浴香薰，著明淨衣，華鬘、瓔珞嚴飾其身，若坐、若臥者，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0425b01'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
+  - paragraphs:
+    - taishoref: '0425b15'
+      content: '世尊復告諸比丘曰：「於意云何？若有力士以緊索毛繩絞勒其[11]𨄔斷皮，斷皮已斷肉，斷肉已斷筋，斷筋已斷骨，斷骨已至髓而住，若從剎利、梵志、居士、工師受其信施，按摩身體、支節、手足，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0425b19'
+      content: '時，諸比丘白曰：「世尊！若有力士以緊索毛繩絞勒其[＊]𨄔斷皮，斷皮已斷肉，斷肉已斷筋，斷筋已斷骨，斷骨已至髓而住，甚苦。世尊！若從剎利、梵志、居士、工師受其信施，按摩身體、支節、手足，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0425b24'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以緊索毛繩絞勒其[＊]𨄔斷皮，斷皮已斷肉，斷肉已斷筋，斷筋已斷骨，斷骨已至髓而住，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0425b24'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
+  - paragraphs:
+    - taishoref: '~0425b24'
+      content: '從剎利、梵志、居士、工師受其信施，按摩身體、支節、手足，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0425b24'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
+  - paragraphs:
+    - taishoref: '0425c10'
+      content: '世尊復告諸比丘曰：「於意云何？若有力士以瑩磨利刀截斷其髀，若從剎利、梵志、居士、工師受信施、禮拜，恭敬將迎，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0425c13'
+      content: '時，諸比丘白曰：「世尊！若有力士以瑩磨利刀截斷其髀，甚苦。世尊！若從剎利、[12]梵志、居士、工師受信施、禮拜，恭敬將迎，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0425c16'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以瑩磨利刀截斷其髀，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0425c16'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
+  - paragraphs:
+    - taishoref: '~0425c16'
+      content: '從剎利、梵志、居士、工師受信施、禮拜，恭敬將迎，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0425c16'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。當作是學。」'
+  - paragraphs:
+    - taishoref: '0425c29'
+      content: '世尊復告諸比丘曰：「於意云何？若有力士以鐵銅鍱洞燃俱熾，纏絡其身，若從剎利、梵志、居士、工師受信施衣服，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0426a03'
+      content: '時，諸比丘白曰：「世尊！若有力士以鐵銅鍱洞燃俱熾，纏絡其身，甚苦。世尊！若從剎利、梵志、居士、工師受信施衣服，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0426a06'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以鐵銅鍱洞燃俱熾，纏絡其身，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0426a06'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
+  - paragraphs:
+    - taishoref: '~0426a06'
+      content: '從剎利、梵志、居士、工師受信施衣服，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0426a06'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
+  - paragraphs:
+    - taishoref: '0426a19'
+      content: '世尊復告諸比丘曰：「於意云何？若有力士以熱鐵[1]鉗鉗開其口，便以鐵丸洞燃俱熾，著其口中，彼熱鐵丸燒脣，燒脣已燒舌，燒舌已燒齗，燒齗已燒咽，燒咽已燒心，燒心已燒腸胃，燒腸胃已下過，若從剎利、梵志、居士、工師受信施食無量眾味，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0426a25'
+      content: '時，諸比丘白曰：「世尊！若有力士以熱鐵[＊]鉗鉗開其口，便以鐵丸洞燃俱熾，著其口中，彼熱鐵丸燒脣，燒脣已燒舌，燒舌已燒齗，燒齗已燒咽，燒咽已燒心，燒心已燒腸胃，燒腸胃已下過，甚苦。世尊！若從剎利、梵志、居士、工師受信施食無量眾味，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0426b02'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以熱鐵鉗鉗開其口，便以鐵丸洞燃俱熾，著其口中，彼熱鐵丸燒脣，燒脣已燒舌，燒舌已燒齗，燒齗已燒咽，燒咽已燒心，燒心已燒腸胃，燒腸胃已下過，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0426b02'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
+  - paragraphs:
+    - taishoref: '~0426b02'
+      content: '從剎利、梵志、居士、工師受信施食無量眾味，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0426b02'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
+  - paragraphs:
+    - taishoref: '0426b19'
+      content: '世尊復告諸比丘曰：「於意云何？若有力士以鐵銅床洞燃俱熾，強逼使人坐臥其上，若從剎利、梵志、居士、工師受其信施床㯓臥具，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0426b22'
+      content: ' 時，諸比丘白曰：「世尊！若有力士以鐵銅床洞燃俱熾，強逼使人坐臥其上，甚苦。世尊！若從剎利、梵志、居士、工師受其信施床㯓臥具，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0426b25'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以鐵銅床洞燃俱熾，強逼使人坐臥其上，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0426b25'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
+  - paragraphs:
+    - taishoref: '~0426b25'
+      content: '從剎利、梵志、居士、工師受其信施床㯓臥具，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0426b25'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
+  - paragraphs:
+    - taishoref: '0426c10'
+      content: '世尊復告諸比丘曰：「於意云何？若有力士以大鐵銅釜洞燃俱熾，撮舉人已，倒著釜中，若從剎利、梵志、居士、工師受信施房舍，泥治堊灑，窻戶牢密，爐火[2]熅暖，何者為樂？」'
+  - paragraphs:
+    - taishoref: '0426c14'
+      content: '時，諸比丘白曰：「世尊！若有力士以大鐵銅釜洞燃俱熾，撮舉人已，倒著釜中，甚苦。世尊！若從剎利、梵志、居士、工師受信施房舍，泥治堊灑，窻戶牢密，爐火[＊]熅暖，甚樂。世尊！」'
+  - paragraphs:
+    - taishoref: '0426c18'
+      content: '世尊告曰：「我為汝說，不令汝等學沙門失沙門道。汝欲成無上梵行者，寧令力士以大鐵銅釜洞燃俱熾，撮舉人已，倒著釜中，彼雖因此受苦或死，然不以是身壞命終，趣至惡處，生地獄中；'
+  - paragraphs:
+    - taishoref: '~0426c18'
+      content: '若愚癡人犯戒不精進，生惡不善法，非梵行稱梵行，非沙門稱沙門，'
+  - paragraphs:
+    - taishoref: '~0426c18'
+      content: '從剎利、梵志、居士、工師受信施房舍，泥治堊灑，窻戶牢密，爐火[＊]熅暖，彼愚癡人因是長夜不善不義，受惡法報，身壞命終，趣至惡處，生地獄中。'
+  - paragraphs:
+    - taishoref: '~0426c18'
+      content: '是故汝等當觀自義、觀彼義、觀兩義，當作是念：『我出家學，不虛不空，有果有報，有極安樂，生諸善處而得長壽，受人[1]信施衣被、飲食、床褥、湯藥，令諸施主得大福祐，得大果報，得大光明者。』當作是學。」'
+  - paragraphs:
+    - taishoref: '0427a03'
+      content: '說此法時，六十比丘漏盡結解，六十比丘捨戒還家。所以者何？世尊教[2]誡甚深、甚難，學道亦復甚深、甚難。'
+  - paragraphs:
+    - taishoref: '0427a05'
+      content: '佛說如是。彼諸比丘聞佛所說，歡喜奉行。'
