--- a/_data/translation/MA_007_ch_Worldly_Merit.yaml
+++ b/_data/translation/MA_007_ch_Worldly_Merit.yaml
@@ -1,50 +1,67 @@
 collection: 長阿含經
 number: '七'
 title: 世間福經
-paragraphs:
-  - taishoref: '0427c26'
-    content: '我聞如是：一時，佛遊拘舍彌，在瞿沙羅園。'
-  - taishoref: '0427c27'
-    content: '爾時，尊者摩訶周那則於晡時從宴坐起，往詣佛所，到已作禮，却坐一面，白曰：「世尊！可得施設世間福耶？」'
-  - taishoref: '0427c29'
-    content: '世尊告曰：「可得。周那！有七世間福，得大福祐，得大果報，得大名譽，得大功德。云何為七？周那！有信族姓男、族姓女，施比丘眾房舍、堂閣。周那！是謂第一世間之福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428a05'
-    content: '「復次，周那！有信族姓男、族姓女，於房舍中施與床座、氍[毯-炎+數]、[1]𣯾𣰆、[2]氈褥、臥具。周那！是謂第二世間之福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428a08'
-    content: '「復次，周那！有信族姓男、族姓女，於房舍中施與一切新淨妙衣。周那！是謂第三世間之福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428a11'
-    content: '「復次，周那！有信族姓男、族姓女，於房舍中常施於眾朝粥、中食，又以園民供給使令，若風雨寒雪，躬往園所，增施供養。諸比丘眾食已，不患風雨寒雪[3]沽漬衣服，晝夜安樂禪寂思惟。周那！是謂第七世間之福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428a17'
-    content: '「周那！信族姓男、族姓女已得此七世間福者，若去若來，若立若坐，若眠若覺，若晝若夜，其福常生，轉增轉廣。'
-  - taishoref: '~0428a17'
-    content: '周那！譬如恒伽水，從源流出，入于大海，於其中間轉深轉廣。周那！如是信族姓男、族姓女已得此七世間福者，若去若來，若立若坐，若眠若覺，若晝若夜，其福常生，轉增轉廣。」'
-  - taishoref: '0428a24'
-    content: '於是，尊者摩訶周那即從[4]坐起，偏袒右肩，右膝著地，長跪叉手白曰：「世尊！可得施設出世間福耶？」'
-  - taishoref: '0428a26'
-    content: '世尊告曰：「可得。周那！更有七福出於世間，得大福祐，得大果報，得大名譽，得大功德。云何為七？周那！有信族姓男、族姓女，聞如來、如來弟子遊於某處，聞已歡喜，極懷踊躍。周那！是謂第一出世間福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428b03'
-    content: '「復次，周那！有信族姓男、族姓女，聞如來、如來弟子欲從彼至此，聞已歡喜，極懷踊躍。周那！是謂第二出世間福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428b06'
-    content: '「復次，周那！有信族姓男、族姓女，聞如來、如來弟子已從彼至此，聞已歡喜，極懷踊躍，以清淨心躬往奉見，禮敬供養，既供養已，受三自歸於佛、法[5]及比丘眾，而受禁戒。周那！是謂第七出世間福，得大福祐，得大果報，得大名譽，得大功德。'
-  - taishoref: '0428b12'
-    content: '「周那！[6]信族姓男、族姓女若得此七世間之福及更有七出世間福者，其福不可數，有爾所福，爾所福果，爾所福報，唯不可限、不可量、不可[7]得大福之數。'
-  - taishoref: '~0428b12'
-    content: '周那！譬如從閻浮洲有五河流：一曰恒伽，二曰搖尤那，三曰舍勞浮，四曰阿夷羅婆提，五曰摩企，流入大海，於其中間水不可數，有爾所[8]升斛，唯不可限，不可量、不可得大水之數。'
-  - taishoref: '~0428b12'
-    content: 周那！如是信族姓男、族姓女若得此七世間之福及更有七出世間福者，[9]其福不可數，有爾所福，爾所福果，爾所福報，唯不可限、不可量、不可得大福之數。」'
-  - taishoref: '0428b24'
-    content: '爾時，世尊而說頌曰：'
-  - taishoref: '~0428b24'
-    content: '「恒伽之河，　　清淨易[10]渡，
-    　海多珍寶，　　眾水中王。'
-  - taishoref: '~0428b24'
-    content: '　猶若河水，　　世人敬奉，
-    　諸川所歸，　　引入大海。'
-  - taishoref: '~0428b24'
-    content: '　如是人者，　　施衣飲食，
-    　床㯓茵褥，　　及諸坐具。'
-  - taishoref: '~0428b24'
-    content: '　無量福報，　　將至妙處，
-    　猶若河水，　　引入大海。」'
-  - taishoref: '0428c04'
-    content: '佛說如是。尊者摩訶周那及諸比丘，聞佛所說，歡喜奉行。'
+sections:
+  - paragraphs:
+    - taishoref: '0427c26'
+      content: '我聞如是：一時，佛遊拘舍彌，在瞿沙羅園。'
+  - paragraphs:
+    - taishoref: '0427c27'
+      content: '爾時，尊者摩訶周那則於晡時從宴坐起，往詣佛所，到已作禮，却坐一面，白曰：「世尊！可得施設世間福耶？」'
+  - paragraphs:
+    - taishoref: '0427c29'
+      content: '世尊告曰：「可得。周那！有七世間福，得大福祐，得大果報，得大名譽，得大功德。云何為七？周那！有信族姓男、族姓女，施比丘眾房舍、堂閣。周那！是謂第一世間之福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428a05'
+      content: '「復次，周那！有信族姓男、族姓女，於房舍中施與床座、氍[毯-炎+數]、[1]𣯾𣰆、[2]氈褥、臥具。周那！是謂第二世間之福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428a08'
+      content: '「復次，周那！有信族姓男、族姓女，於房舍中施與一切新淨妙衣。周那！是謂第三世間之福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428a11'
+      content: '「復次，周那！有信族姓男、族姓女，於房舍中常施於眾朝粥、中食，又以園民供給使令，若風雨寒雪，躬往園所，增施供養。諸比丘眾食已，不患風雨寒雪[3]沽漬衣服，晝夜安樂禪寂思惟。周那！是謂第七世間之福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428a17'
+      content: '「周那！信族姓男、族姓女已得此七世間福者，若去若來，若立若坐，若眠若覺，若晝若夜，其福常生，轉增轉廣。'
+  - paragraphs:
+    - taishoref: '~0428a17'
+      content: '周那！譬如恒伽水，從源流出，入于大海，於其中間轉深轉廣。周那！如是信族姓男、族姓女已得此七世間福者，若去若來，若立若坐，若眠若覺，若晝若夜，其福常生，轉增轉廣。」'
+  - paragraphs:
+    - taishoref: '0428a24'
+      content: '於是，尊者摩訶周那即從[4]坐起，偏袒右肩，右膝著地，長跪叉手白曰：「世尊！可得施設出世間福耶？」'
+  - paragraphs:
+    - taishoref: '0428a26'
+      content: '世尊告曰：「可得。周那！更有七福出於世間，得大福祐，得大果報，得大名譽，得大功德。云何為七？周那！有信族姓男、族姓女，聞如來、如來弟子遊於某處，聞已歡喜，極懷踊躍。周那！是謂第一出世間福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428b03'
+      content: '「復次，周那！有信族姓男、族姓女，聞如來、如來弟子欲從彼至此，聞已歡喜，極懷踊躍。周那！是謂第二出世間福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428b06'
+      content: '「復次，周那！有信族姓男、族姓女，聞如來、如來弟子已從彼至此，聞已歡喜，極懷踊躍，以清淨心躬往奉見，禮敬供養，既供養已，受三自歸於佛、法[5]及比丘眾，而受禁戒。周那！是謂第七出世間福，得大福祐，得大果報，得大名譽，得大功德。'
+  - paragraphs:
+    - taishoref: '0428b12'
+      content: '「周那！[6]信族姓男、族姓女若得此七世間之福及更有七出世間福者，其福不可數，有爾所福，爾所福果，爾所福報，唯不可限、不可量、不可[7]得大福之數。'
+  - paragraphs:
+    - taishoref: '~0428b12'
+      content: '周那！譬如從閻浮洲有五河流：一曰恒伽，二曰搖尤那，三曰舍勞浮，四曰阿夷羅婆提，五曰摩企，流入大海，於其中間水不可數，有爾所[8]升斛，唯不可限，不可量、不可得大水之數。'
+  - paragraphs:
+    - taishoref: '~0428b12'
+      content: 周那！如是信族姓男、族姓女若得此七世間之福及更有七出世間福者，[9]其福不可數，有爾所福，爾所福果，爾所福報，唯不可限、不可量、不可得大福之數。」'
+  - paragraphs:
+    - taishoref: '0428b24'
+      content: '爾時，世尊而說頌曰：'
+    - taishoref: '~0428b24'
+      content: '「恒伽之河，　　清淨易[10]渡，
+      　海多珍寶，　　眾水中王。'
+    - taishoref: '~0428b24'
+      content: '　猶若河水，　　世人敬奉，
+      　諸川所歸，　　引入大海。'
+    - taishoref: '~0428b24'
+      content: '　如是人者，　　施衣飲食，
+      　床㯓茵褥，　　及諸坐具。'
+    - taishoref: '~0428b24'
+      content: '　無量福報，　　將至妙處，
+      　猶若河水，　　引入大海。」'
+  - paragraphs:
+    - taishoref: '0428c04'
+      content: '佛說如是。尊者摩訶周那及諸比丘，聞佛所說，歡喜奉行。'
