--- a/_data/translation/MA_003_ch_City_Parable.yaml
+++ b/_data/translation/MA_003_ch_City_Parable.yaml
@@ -1,82 +1,121 @@
 collection: 中阿含經
 number: '三'
 title: 城喻經
-paragraphs:
-  - taishoref: '0422c10'
-    content: '我聞如是：一時，佛遊舍衛國，在勝林給孤獨園。'
-  - taishoref: '0422c11'
-    content: '爾時，世尊告諸比丘：「如王邊城七事具足，四食豐饒，易不難得，是故王城不為外敵破，唯除內自壞。'
-  - taishoref: '0422c13'
-    content: '「云何王城七事具足？謂王邊城造立樓櫓，築地使堅，不可毀壞，為內安隱，制外怨敵，是謂王城一事具足。'
-  - taishoref: '~0422c13'
-    content: '復次，如王邊城掘鑿池壍，極使深廣，修備可依，為內安隱，制外怨敵，是謂王城二事具足。'
-  - taishoref: '~0422c13'
-    content: '復次，如王邊城周匝通道，開除平博，為內安隱，制外怨敵，是謂王城三事具足。'
-  - taishoref: '~0422c13'
-    content: '復次，如王邊城集四種軍[13]力，[14]象軍、馬軍、車軍、步軍，為內安隱，制外怨敵，是謂王城四事具足。'
-  - taishoref: '~0422c13'
-    content: '復次，如王邊城豫備軍器弓、矢、鉾、戟，為內安隱，制外怨敵，是謂王城五事具足。'
-  - taishoref: '~0422c13'
-    content: '復次，如王邊城立守門大將，明略智辯，勇毅奇謀，善則聽入，不善則禁，為內安隱，制外怨敵，是謂王城六事具足。'
-  - taishoref: '~0422c13'
-    content: '復次，如王邊城築立高墻，令極牢固，泥塗堊灑，為內安隱，制外怨敵，是謂王城七事具足也。'
-  - taishoref: '0422c28'
-    content: '「云何王城四[15]食豐饒，易不難得？謂王邊城水草樵木，資有豫備，為內安隱，制外怨敵，是謂王城一食豐饒，易不難得。'
-  - taishoref: '~0422c28'
-    content: '復次，如王邊城多收稻穀及儲畜麥，為內安隱，制外怨敵，是謂王城二食豐饒，易不難得。'
-  - taishoref: '~0422c28'
-    content: '復次，如王邊城多積[1]秥豆及大小豆，為內安隱，制外怨敵，是謂王城三食豐饒，易不難得。'
-  - taishoref: '~0422c28'
-    content: '復次，如王邊城畜酥油、蜜及甘蔗、[2]餹、魚、鹽、脯肉，一切[3]具足，為內安隱，制[4]外怨敵，是謂王城四食豐饒，易不難得。'
-  - taishoref: '~0422c28'
-    content: '如是王城七事具足，四食豐饒，易不難得，不為外敵破，唯除內自壞。'
-  - taishoref: '0423a11'
-    content: '「如是，若聖弟子亦得七善法，逮四增上心，易不難得。是故聖弟子不為魔王之所得便，亦不隨惡不善之法，不為染污所染，不復更受生也。'
-  - taishoref: '0423a14'
-    content: '「云何聖弟子得七善法？謂聖弟子得堅固信，深著如來，信根已立，終不隨外沙門、梵志，若天、魔、梵及餘世間，是謂聖弟子得一善法。'
-  - taishoref: '~0423a14'
-    content: '復次，聖弟子常行慚耻，可慚知慚，惡不善法穢汙煩惱，受諸惡報，造生死本，是謂聖弟子得二善法。'
-  - taishoref: '~0423a14'
-    content: '復次，聖弟子常行羞愧，可愧知愧，惡不善法穢汙煩惱，受諸惡報，造生死本，是謂聖弟子得三善法。'
-  - taishoref: '~0423a14'
-    content: '復次，聖弟子常行精進，斷惡不善，修諸善法，恒自起意，專一堅固，為諸善本，不捨方便，是謂聖弟子得四善法。'
-  - taishoref: '~0423a14'
-    content: '復次，聖弟子廣學多聞，守持不忘，積聚博聞，所謂法者，初善、中善、竟亦善，有義有文，具足清淨，顯現梵行，如是諸法廣學多聞，翫習至千，意所惟觀，明見深達，是謂聖弟子得五善法。'
-  - taishoref: '~0423a14'
-    content: '復次，聖弟子常行於念，成就正念，久所曾習，久所曾聞，恒憶不忘，是謂聖弟子得六善法。'
-  - taishoref: '~0423a14'
-    content: '復次，聖弟子修行智慧，觀興衰法，得如此智，聖慧明達，分別曉了，以正盡苦，是謂聖弟子得七善法也。'
-  - taishoref: '0423b04'
-    content: '「云何聖弟子逮四增上心，易不難得？謂聖弟子離欲、離惡不善之法，有覺、有觀，離生喜樂，逮初禪成就遊，是謂聖弟子逮初增上心，易不難得。'
-  - taishoref: '~0423b04'
-    content: '復次，聖弟子覺、觀已息，內[5]靜、一心，無覺、無觀，定生喜樂，逮第二禪成就遊，是謂聖弟子逮第二增上心，易不難得。'
-  - taishoref: '~0423b04'
-    content: '復次，聖弟子離於喜欲，捨無求遊，正念正智而身覺樂，謂聖所說、聖所捨、念、樂住、空，逮第三禪成就遊，是謂聖弟子逮第三增上心，易不難得。'
-  - taishoref: '~0423b04'
-    content: '復次，聖弟子樂滅、苦滅，喜憂本已滅，不苦不樂、捨、念、清淨，逮第四禪成就遊，是謂聖弟子逮第四增上心，易不難得。'
-  - taishoref: '0423b16'
-    content: '「如是，聖弟子得七善法，逮四增上心，易不難得。不為魔王之所得便，亦不隨惡不善之法，不為染污所染，不復更受生。'
-  - taishoref: '~0423b16'
-    content: '如王邊城造立樓櫓，築地使堅，不可毀壞，為內安隱，制外怨敵。如是，聖弟子得堅固信，深著如來，信根已立，終不隨外沙門，梵志，若天、魔、梵及餘世間，是謂聖弟子得信樓櫓，除惡不善，修諸善法也。'
-  - taishoref: '0423b23'
-    content: '「如王邊城掘鑿池塹，極使深廣，修備可依，為內安隱，制外怨敵。如是，聖弟子常行慚耻，可慚知慚，惡不善法穢汙煩惱，受諸惡報，造生死本，是謂聖弟子得慚池塹，除惡不善，修諸善法也。'
-  - taishoref: '0423b28'
-    content: '「如王邊城周匝通道，開除平博，為內安隱，制外怨敵。如是，聖弟子常行羞愧，可愧知愧，惡不善法穢污煩惱，受諸惡報，造生死本，是謂聖弟子得愧平道，除惡不善，修諸善法也。'
-  - taishoref: '0423c03'
-    content: '「如王邊城集四種軍[＊]力，象軍、馬軍、車軍、步軍，為內安隱，制外怨敵。如是，聖弟子常行精進，斷惡不善，修諸善法，恒自起意，專一堅固，為諸善本，不捨方便，是謂聖弟子得精進軍力，除惡不善，修諸善法也。'
-  - taishoref: '0423c08'
-    content: '「如王邊城[6]豫備軍器弓、矢、[7]鉾、戟，為內安隱，制外怨敵。如是，聖弟子廣學多聞，守持不忘，積聚博聞，所謂法者，初善、中善、竟亦善，有義有文，具足清淨，顯現梵行。如是諸法廣學多聞，翫習至千，意所惟觀，明見深[8]達，是謂聖弟子得多聞軍器，除惡不善，修諸善法也。'
-  - taishoref: '0423c14'
-    content: '「如王邊城立守門大將，明略智辯，勇毅奇謀，善則聽入，不善則禁，為內安隱，制外怨敵。如是，聖弟子常行於念，成就正念，久所曾習，久所曾聞，恒憶不忘，是謂聖弟子得念守門大將，除惡不善，修諸善法也。'
-  - taishoref: '0423c19'
-    content: '「如王邊城築立高牆，令極牢固，泥塗堊灑，為內安隱，制外怨敵。如是，聖弟子修行智慧，觀興衰法，得如此智，聖慧明達，分別曉了，以正盡苦，是謂聖弟子得智慧牆，除惡不善，修諸善法也。'
-  - taishoref: '0423c23'
-    content: '「如王邊城水草樵木，資有豫備，為內安隱，制外怨敵。如是，聖弟子離欲、離惡不善之法，有覺、有觀，離生喜樂，逮初禪成就遊，樂住無乏，安隱快樂，自致涅槃也。'
-  - taishoref: '0423c27'
-    content: '「如王邊城多收稻穀及儲畜麥，為內安隱，制外怨敵。如是，聖弟子覺、觀已息，內[＊]靜、一心，無覺、無觀，定生喜樂，逮第二禪成就遊，樂住無乏，安隱快樂，自致涅槃也。'
-  - taishoref: '0424a02'
-    content: '「如王邊城多積秥豆及大小豆，為內安隱，制外怨敵。如是，聖弟子離於喜欲，捨無求遊，正念正智而身覺樂，謂聖所說、聖所捨、念、樂住、空，逮第三禪成就遊，樂住無乏，安隱快樂，自致涅槃也。'
-  - taishoref: '0424a06'
-    content: '「如王邊城畜酥油、蜜及甘蔗、[＊]餹、魚、鹽、脯肉，一切充足，為內安隱，制外怨敵。如是，聖弟子樂滅、苦滅，喜、憂本已滅，不苦不樂、捨、念、清淨，逮第四禪成就遊，樂住無乏，安隱快樂，自致涅槃。」'
-  - taishoref: '0424a10'
-    content: '佛說如是。彼諸比丘聞佛所說，歡喜奉行。'
+sections:
+  - paragraphs:
+    - taishoref: '0422c10'
+      content: '我聞如是：一時，佛遊舍衛國，在勝林給孤獨園。'
+  - paragraphs:
+    - taishoref: '0422c11'
+      content: '爾時，世尊告諸比丘：「如王邊城七事具足，四食豐饒，易不難得，是故王城不為外敵破，唯除內自壞。'
+  - paragraphs:
+    - taishoref: '0422c13'
+      content: '「云何王城七事具足？謂王邊城造立樓櫓，築地使堅，不可毀壞，為內安隱，制外怨敵，是謂王城一事具足。'
+  - paragraphs:
+    - taishoref: '~0422c13'
+      content: '復次，如王邊城掘鑿池壍，極使深廣，修備可依，為內安隱，制外怨敵，是謂王城二事具足。'
+  - paragraphs:
+    - taishoref: '~0422c13'
+      content: '復次，如王邊城周匝通道，開除平博，為內安隱，制外怨敵，是謂王城三事具足。'
+  - paragraphs:
+    - taishoref: '~0422c13'
+      content: '復次，如王邊城集四種軍[13]力，[14]象軍、馬軍、車軍、步軍，為內安隱，制外怨敵，是謂王城四事具足。'
+  - paragraphs:
+    - taishoref: '~0422c13'
+      content: '復次，如王邊城豫備軍器弓、矢、鉾、戟，為內安隱，制外怨敵，是謂王城五事具足。'
+  - paragraphs:
+    - taishoref: '~0422c13'
+      content: '復次，如王邊城立守門大將，明略智辯，勇毅奇謀，善則聽入，不善則禁，為內安隱，制外怨敵，是謂王城六事具足。'
+  - paragraphs:
+    - taishoref: '~0422c13'
+      content: '復次，如王邊城築立高墻，令極牢固，泥塗堊灑，為內安隱，制外怨敵，是謂王城七事具足也。'
+  - paragraphs:
+    - taishoref: '0422c28'
+      content: '「云何王城四[15]食豐饒，易不難得？謂王邊城水草樵木，資有豫備，為內安隱，制外怨敵，是謂王城一食豐饒，易不難得。'
+  - paragraphs:
+    - taishoref: '~0422c28'
+      content: '復次，如王邊城多收稻穀及儲畜麥，為內安隱，制外怨敵，是謂王城二食豐饒，易不難得。'
+  - paragraphs:
+    - taishoref: '~0422c28'
+      content: '復次，如王邊城多積[1]秥豆及大小豆，為內安隱，制外怨敵，是謂王城三食豐饒，易不難得。'
+  - paragraphs:
+    - taishoref: '~0422c28'
+      content: '復次，如王邊城畜酥油、蜜及甘蔗、[2]餹、魚、鹽、脯肉，一切[3]具足，為內安隱，制[4]外怨敵，是謂王城四食豐饒，易不難得。'
+  - paragraphs:
+    - taishoref: '~0422c28'
+      content: '如是王城七事具足，四食豐饒，易不難得，不為外敵破，唯除內自壞。'
+  - paragraphs:
+    - taishoref: '0423a11'
+      content: '「如是，若聖弟子亦得七善法，逮四增上心，易不難得。是故聖弟子不為魔王之所得便，亦不隨惡不善之法，不為染污所染，不復更受生也。'
+  - paragraphs:
+    - taishoref: '0423a14'
+      content: '「云何聖弟子得七善法？謂聖弟子得堅固信，深著如來，信根已立，終不隨外沙門、梵志，若天、魔、梵及餘世間，是謂聖弟子得一善法。'
+  - paragraphs:
+    - taishoref: '~0423a14'
+      content: '復次，聖弟子常行慚耻，可慚知慚，惡不善法穢汙煩惱，受諸惡報，造生死本，是謂聖弟子得二善法。'
+  - paragraphs:
+    - taishoref: '~0423a14'
+      content: '復次，聖弟子常行羞愧，可愧知愧，惡不善法穢汙煩惱，受諸惡報，造生死本，是謂聖弟子得三善法。'
+  - paragraphs:
+    - taishoref: '~0423a14'
+      content: '復次，聖弟子常行精進，斷惡不善，修諸善法，恒自起意，專一堅固，為諸善本，不捨方便，是謂聖弟子得四善法。'
+  - paragraphs:
+    - taishoref: '~0423a14'
+      content: '復次，聖弟子廣學多聞，守持不忘，積聚博聞，所謂法者，初善、中善、竟亦善，有義有文，具足清淨，顯現梵行，如是諸法廣學多聞，翫習至千，意所惟觀，明見深達，是謂聖弟子得五善法。'
+  - paragraphs:
+    - taishoref: '~0423a14'
+      content: '復次，聖弟子常行於念，成就正念，久所曾習，久所曾聞，恒憶不忘，是謂聖弟子得六善法。'
+  - paragraphs:
+    - taishoref: '~0423a14'
+      content: '復次，聖弟子修行智慧，觀興衰法，得如此智，聖慧明達，分別曉了，以正盡苦，是謂聖弟子得七善法也。'
+  - paragraphs:
+    - taishoref: '0423b04'
+      content: '「云何聖弟子逮四增上心，易不難得？謂聖弟子離欲、離惡不善之法，有覺、有觀，離生喜樂，逮初禪成就遊，是謂聖弟子逮初增上心，易不難得。'
+  - paragraphs:
+    - taishoref: '~0423b04'
+      content: '復次，聖弟子覺、觀已息，內[5]靜、一心，無覺、無觀，定生喜樂，逮第二禪成就遊，是謂聖弟子逮第二增上心，易不難得。'
+  - paragraphs:
+    - taishoref: '~0423b04'
+      content: '復次，聖弟子離於喜欲，捨無求遊，正念正智而身覺樂，謂聖所說、聖所捨、念、樂住、空，逮第三禪成就遊，是謂聖弟子逮第三增上心，易不難得。'
+  - paragraphs:
+    - taishoref: '~0423b04'
+      content: '復次，聖弟子樂滅、苦滅，喜憂本已滅，不苦不樂、捨、念、清淨，逮第四禪成就遊，是謂聖弟子逮第四增上心，易不難得。'
+  - paragraphs:
+    - taishoref: '0423b16'
+      content: '「如是，聖弟子得七善法，逮四增上心，易不難得。不為魔王之所得便，亦不隨惡不善之法，不為染污所染，不復更受生。'
+  - paragraphs:
+    - taishoref: '~0423b16'
+      content: '如王邊城造立樓櫓，築地使堅，不可毀壞，為內安隱，制外怨敵。如是，聖弟子得堅固信，深著如來，信根已立，終不隨外沙門，梵志，若天、魔、梵及餘世間，是謂聖弟子得信樓櫓，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423b23'
+      content: '「如王邊城掘鑿池塹，極使深廣，修備可依，為內安隱，制外怨敵。如是，聖弟子常行慚耻，可慚知慚，惡不善法穢汙煩惱，受諸惡報，造生死本，是謂聖弟子得慚池塹，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423b28'
+      content: '「如王邊城周匝通道，開除平博，為內安隱，制外怨敵。如是，聖弟子常行羞愧，可愧知愧，惡不善法穢污煩惱，受諸惡報，造生死本，是謂聖弟子得愧平道，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423c03'
+      content: '「如王邊城集四種軍[＊]力，象軍、馬軍、車軍、步軍，為內安隱，制外怨敵。如是，聖弟子常行精進，斷惡不善，修諸善法，恒自起意，專一堅固，為諸善本，不捨方便，是謂聖弟子得精進軍力，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423c08'
+      content: '「如王邊城[6]豫備軍器弓、矢、[7]鉾、戟，為內安隱，制外怨敵。如是，聖弟子廣學多聞，守持不忘，積聚博聞，所謂法者，初善、中善、竟亦善，有義有文，具足清淨，顯現梵行。如是諸法廣學多聞，翫習至千，意所惟觀，明見深[8]達，是謂聖弟子得多聞軍器，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423c14'
+      content: '「如王邊城立守門大將，明略智辯，勇毅奇謀，善則聽入，不善則禁，為內安隱，制外怨敵。如是，聖弟子常行於念，成就正念，久所曾習，久所曾聞，恒憶不忘，是謂聖弟子得念守門大將，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423c19'
+      content: '「如王邊城築立高牆，令極牢固，泥塗堊灑，為內安隱，制外怨敵。如是，聖弟子修行智慧，觀興衰法，得如此智，聖慧明達，分別曉了，以正盡苦，是謂聖弟子得智慧牆，除惡不善，修諸善法也。'
+  - paragraphs:
+    - taishoref: '0423c23'
+      content: '「如王邊城水草樵木，資有豫備，為內安隱，制外怨敵。如是，聖弟子離欲、離惡不善之法，有覺、有觀，離生喜樂，逮初禪成就遊，樂住無乏，安隱快樂，自致涅槃也。'
+  - paragraphs:
+    - taishoref: '0423c27'
+      content: '「如王邊城多收稻穀及儲畜麥，為內安隱，制外怨敵。如是，聖弟子覺、觀已息，內[＊]靜、一心，無覺、無觀，定生喜樂，逮第二禪成就遊，樂住無乏，安隱快樂，自致涅槃也。'
+  - paragraphs:
+    - taishoref: '0424a02'
+      content: '「如王邊城多積秥豆及大小豆，為內安隱，制外怨敵。如是，聖弟子離於喜欲，捨無求遊，正念正智而身覺樂，謂聖所說、聖所捨、念、樂住、空，逮第三禪成就遊，樂住無乏，安隱快樂，自致涅槃也。'
+  - paragraphs:
+    - taishoref: '0424a06'
+      content: '「如王邊城畜酥油、蜜及甘蔗、[＊]餹、魚、鹽、脯肉，一切充足，為內安隱，制外怨敵。如是，聖弟子樂滅、苦滅，喜、憂本已滅，不苦不樂、捨、念、清淨，逮第四禪成就遊，樂住無乏，安隱快樂，自致涅槃。」'
+  - paragraphs:
+    - taishoref: '0424a10'
+      content: '佛說如是。彼諸比丘聞佛所說，歡喜奉行。'
