--- a/_data/translation/MA_007_en_Worldly_Merit.yaml
+++ b/_data/translation/MA_007_en_Worldly_Merit.yaml
@@ -1,66 +1,85 @@
-collection: The Middle-Length Discourses
+collection: The Medium Discourses
 number: 7
 title: Worldly Merit
-paragraphs:
-  - taishoref: 0427c26
-    content: 'I have heard thus: One time, the Buddha traveled to Kauśāmbī and stayed at Gosira Park.<sup class="noteref">1</sup>'
-    notes:
-      - content: 'Gosira Park. This is the Sanskrit equivalent of Gositarama in Pali sources.'
-  - taishoref: 0427c27
-    content: 'At the time, the Venerable Mahācunda rose from his seat of repose late in the afternoon and went to visit the Buddha. When he arrived, he bowed and withdrew to sit at one side. He said, “Bhagavān, would it be possible to define worldly merit?”'
-  - taishoref: 0427c29
-    content: 'The Bhagavān told him, “It’s possible, Cunda. There are seven worldly merits that obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give monasteries and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
-  - taishoref: 0428a05
-    content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.<sup class="noteref">2</sup> This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
-    notes:
-      - content: <em>carpets, blankets, mattresses</em>. The Chinese for these terms uses obscure classical expressions that were used for different things over the ages. I’ve translated them generally, but the items in the original text may have been more specific than this.
-  - taishoref: 0428a08
-    content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
-  - taishoref: 0428a11
-    content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give the community the morning rice gruel and midday meals. They also tell their servants to serve the monastery, and they give additional offerings to the monastery when there are rain and snow storms, so the assembly of monks aren’t troubled after eating about the bad weather making their robes wet. Day and night, they meditate and contemplate in comfort instead. This, Cunda, is the seventh worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
-  - taishoref: 0428a17
-    content: '“Cunda, for faithful clansmen and clanswomen who have obtained these seven worldly merits, their merits will always arise, becoming greater and broader whether its in the past or future, while standing or sitting, or whether asleep, awake, day, or night.'
-  - taishoref: ~0428a17
-    content: '“Cunda, it’s like the Gaṅgā River, which flows from it’s source to the ocean. It becomes deeper and wider as it goes. Thus, Cunda, are faithful clansmen and clanswomen who have obtained these seven worldly merits. Their merits will always arise, becoming greater and broader whether its in the past or future, while standing or sitting, or whether asleep, awake, day, or night.”'
-  - taishoref: 0428a24
-    content: 'Venerable Mahācunda then rose from his seat, adjusted his robes from his right shoulder, knelt on his right knee, and saluted with his palms together. He said, “Bhagavān, would it be possible to define the merits that transcend the world?”'
-  - taishoref: 0428a26
-    content: 'The Bhagavān addressed him, “It’s possible to define the merits that transcend the world. There are another seven merits that transcend the world and obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have traveled to a certain place, and they rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the first merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.'
-  - taishoref: 0428b03
-    content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples are about to come from that place to their own, and they rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the second merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.'
-  - taishoref: 0428b06
-    content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have arrived from there, and they rejoice upon hearing it, celebrating in their hearts. They go personally to see them with a pure heart, and they pay their respects and make offerings. Once they had made offerings, they thrice take refuge in the Buddha, teaching, and community of monks, and they accept the precepts. This, Cunda is the seventh merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.'
-  - taishoref: 0428b12
-    content: '“Cunda, if a faithful clansmen and clanswoman were to attain these seven worldly merits and these other seven merits that transcend the world, their merits would be incalculable. Possessing such merits, the results of such merits, and the rewards of such merits, they simply cannot be delimited, cannot be measured, and the number of those great merits cannot be found.'
-  - taishoref: ~0428b12
-    content: '“Cunda, it’s like the five rivers that are in Jambudvīpa: 1. The Gaṅgā, 2. Yamunā, 3. Sarabhu, 4. Ajiravatī, and 5. Mahī. They flow down into the ocean, and their water is incalculable. The volume that it possesses simply cannot be delimited, cannot be measured, and the amount of water cannot be found.'
-  - taishoref: ~0428b12
-    content: '“Cunda, if such a faithful clansman or clanswoman attains these seven worldly merits and those other seven merits that transcend the world, their merits would be incalculable. Possessing such merits, the results of such merits, and the rewards of such merits, they simply cannot be delimited, cannot be measured, and the number of those great merits cannot be found.”'
-  - taishoref: 0428b24
-    content: 'At that time, the Bhagavān spoke in verse:'
-  - taishoref: ~0428b24
-    verse:
-      - '“The Gaṅgā River'
-      - 'Is clean and easy to cross;'
-      - 'The ocean with many treasures'
-      - 'Is the king of myriad rivers.'
-  - taishoref: ~0428b24
-    verse:
-      - 'Like a river’s flow,'
-      - 'A worldly person bows low;'
-      - 'That’s where streams return'
-      - 'As they go forth into the ocean.'
-  - taishoref: ~0428b24
-    verse:
-      - 'Such a person'
-      - 'Gives clothes, food, and drink;'
-      - 'Beds, sofas, mats,'
-      - 'And things upon which to sit.'
-  - taishoref: ~0428b24
-    verse:
-      - 'Measureless rewards of merit'
-      - 'Lead him to a marvelous place;'
-      - 'He’s like the river’s flow'
-      - 'Going forth into the ocean.”'
-  - taishoref: 0428c04
-    content: 'The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha had taught rejoiced and handed it down.'
+translator: Charles Patton
+revised: 15 August 2019
+sections:
+  - paragraphs:
+    - taishoref: 0427c26
+      content: 'I have heard thus: One time, the Buddha traveled to Kauśāmbī and stayed at Gosira Park.<sup class="noteref">1</sup>'
+      notes:
+        - content: 'Gosira Park. This is the Sanskrit equivalent of Gositarama in Pali sources.'
+  - paragraphs:
+    - taishoref: 0427c27
+      content: 'At the time, the Venerable Mahācunda rose from his seat of repose late in the afternoon and went to visit the Buddha. When he arrived, he bowed and withdrew to sit at one side. He said, “Bhagavān, would it be possible to define worldly merit?”'
+  - paragraphs:
+    - taishoref: 0427c29
+      content: 'The Bhagavān told him, “It’s possible, Cunda. There are seven worldly merits that obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who give monasteries and meeting halls to the assembly of monks. This, Cunda, is the first worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
+  - paragraphs:
+    - taishoref: 0428a05
+      content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give them seats, carpets, blankets, mattresses, and bedding supplies.<sup class="noteref">2</sup> This, Cunda, is the second worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
+      notes:
+        - content: <em>carpets, blankets, mattresses</em>. The Chinese for these terms uses obscure classical expressions that were used for different things over the ages. I’ve translated them generally, but the items in the original text may have been more specific than this.
+  - paragraphs:
+    - taishoref: 0428a08
+      content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give everyone new, clean, and marvelous clothing. This, Cunda, is the third worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
+  - paragraphs:
+    - taishoref: 0428a11
+      content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who go into monasteries and give the community the morning rice gruel and midday meals. They also tell their servants to serve the monastery, and they give additional offerings to the monastery when there are rain and snow storms, so the assembly of monks aren’t troubled after eating about the bad weather making their robes wet. Day and night, they meditate and contemplate in comfort instead. This, Cunda, is the seventh worldly merit that obtains great fortune, great rewards, great renown, and great virtue.'
+  - paragraphs:
+    - taishoref: 0428a17
+      content: '“Cunda, for faithful clansmen and clanswomen who have obtained these seven worldly merits, their merits will always arise, becoming greater and broader whether its in the past or future, while standing or sitting, or whether asleep, awake, day, or night.'
+  - paragraphs:
+    - taishoref: ~0428a17
+      content: '“Cunda, it’s like the Gaṅgā River, which flows from it’s source to the ocean. It becomes deeper and wider as it goes. Thus, Cunda, are faithful clansmen and clanswomen who have obtained these seven worldly merits. Their merits will always arise, becoming greater and broader whether its in the past or future, while standing or sitting, or whether asleep, awake, day, or night.”'
+  - paragraphs:
+    - taishoref: 0428a24
+      content: 'Venerable Mahācunda then rose from his seat, adjusted his robes from his right shoulder, knelt on his right knee, and saluted with his palms together. He said, “Bhagavān, would it be possible to define the merits that transcend the world?”'
+  - paragraphs:
+    - taishoref: 0428a26
+      content: 'The Bhagavān addressed him, “It’s possible to define the merits that transcend the world. There are another seven merits that transcend the world and obtain great fortune, great rewards, great renown, and great virtue. What are the seven? Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have traveled to a certain place, and they rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the first merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.'
+  - paragraphs:
+    - taishoref: 0428b03
+      content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples are about to come from that place to their own, and they rejoice upon hearing about it, celebrating in their hearts. Cunda, this is the second merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.'
+  - paragraphs:
+    - taishoref: 0428b06
+      content: '“Furthermore, Cunda, there are the faithful clansmen and clanswomen who hear that the Tathāgata or one of his disciples have arrived from there, and they rejoice upon hearing it, celebrating in their hearts. They go personally to see them with a pure heart, and they pay their respects and make offerings. Once they had made offerings, they thrice take refuge in the Buddha, teaching, and community of monks, and they accept the precepts. This, Cunda is the seventh merit that transcends the world and obtains great fortune, great rewards, great renown, and great virtue.'
+  - paragraphs:
+    - taishoref: 0428b12
+      content: '“Cunda, if a faithful clansmen and clanswoman were to attain these seven worldly merits and these other seven merits that transcend the world, their merits would be incalculable. Possessing such merits, the results of such merits, and the rewards of such merits, they simply cannot be delimited, cannot be measured, and the number of those great merits cannot be found.'
+  - paragraphs:
+    - taishoref: ~0428b12
+      content: '“Cunda, it’s like the five rivers that are in Jambudvīpa: 1. The Gaṅgā, 2. Yamunā, 3. Sarabhu, 4. Ajiravatī, and 5. Mahī. They flow down into the ocean, and their water is incalculable. The volume that it possesses simply cannot be delimited, cannot be measured, and the amount of water cannot be found.'
+  - paragraphs:
+    - taishoref: ~0428b12
+      content: '“Cunda, if such a faithful clansman or clanswoman attains these seven worldly merits and those other seven merits that transcend the world, their merits would be incalculable. Possessing such merits, the results of such merits, and the rewards of such merits, they simply cannot be delimited, cannot be measured, and the number of those great merits cannot be found.”'
+  - paragraphs:
+    - taishoref: 0428b24
+      content: 'At that time, the Bhagavān spoke in verse:'
+    - taishoref: ~0428b24
+      verse:
+        - '“The Gaṅgā River'
+        - 'Is clean and easy to cross;'
+        - 'The ocean with many treasures'
+        - 'Is the king of myriad rivers.'
+    - taishoref: ~0428b24
+      verse:
+        - 'Like a river’s flow,'
+        - 'A worldly person bows low;'
+        - 'That’s where streams return'
+        - 'As they go forth into the ocean.'
+    - taishoref: ~0428b24
+      verse:
+        - 'Such a person'
+        - 'Gives clothes, food, and drink;'
+        - 'Beds, sofas, mats,'
+        - 'And things upon which to sit.'
+    - taishoref: ~0428b24
+      verse:
+        - 'Measureless rewards of merit'
+        - 'Lead him to a marvelous place;'
+        - 'He’s like the river’s flow'
+        - 'Going forth into the ocean.”'
+  - paragraphs:
+    - taishoref: 0428c04
+      content: 'The Buddha spoke thus. The Venerable Mahācunda and the monks who heard what the Buddha had taught rejoiced and handed it down.'
