Restructured glossary data to allow multiple senses for each term. Reformatted the glossary index and the term entries.

--- a/_data/translation/DA_29_en_Lohitya.yaml
+++ b/_data/translation/DA_29_en_Lohitya.yaml
@@ -18,7 +18,7 @@ sections:
     - taishoref: '~0112c23'
       content: 'He heard that the mendicant Gautama of the Śākya clan who had left the home life <span class="taishoref" id="113a">[113a]</span> and achieved awakening was touring among the people of Kauśala and had arrived in a śiṃśapā grove. <span class="added">This Gautama</span> had a great reputation that was heard throughout the world. He was a Tathāgata, an Arhat, and a Perfectly Awakened One fully endowed with the ten epithets. Among gods, worldly men, and demons or the assemblies of Māra’s gods, mendicants, and brahmins, he had himself become realized and taught the Dharma to others. It was good in the beginning, middle, and end, complete in meaning and manner, and the purification of the religious life. “I ought to go and have an audience with such a true man as this. I would like to go and pay him a visit now.”<sup class="noteref">1</sup>'
       notes:
-        - content: 'In the Pali, Lohicca sends his barber both to invite the Buddha and let him know when it’s time to come. This removes the context for Lohitya’s wrong view, which may be why the Pali mentions it before this sequence of events.'
+        - content: 'In the Pali, Lohicca sends his barber both to invite the Buddha and let him know when it’s time to come. This removes the context for Lohitya’s wrong view, which may be why the Pali mentions it before telling the story.'
   - paragraphs:
     - taishoref: '0113a06'
       content: 'That brahmin then left his village and went to visit the Bhagavān in that śiṃśapā grove. After making polite inquiries, he sat to one side. The Buddha taught the Dharma for him, clearly teaching it with intelligence adnd joy. After that brahmin heard the Dharma, he said to the Buddha, “May the Bhagavān and the great assemblies clearly accept my invitation.”'
@@ -29,14 +29,14 @@ sections:
       content: 'That brahmin saw that the Buddha was silent. Once he knew that he had <span class="added">the Buddha’s</span> assent, he rose from his seat, circled the Buddha, and left. Not far from the Buddha, an evil view occurred to him. “Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn’t teach it for other people. Knowing it themselves, they desist from giving teachings to others. It’s like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!”'
   - paragraphs:
     - taishoref: '0113a14'
-      content: 'After the brahmin had returned to the sala grove, that night he prepared a variety of delicious food and drink. When they came, he said to his barber, “Take my words to the simsapa grove and tell the mendicant Gautama, ’Once daytime has arrived, you ought to know it’s time.’"'
+      content: 'After the brahmin had returned to the sala grove, that night he prepared a variety of delicious food and drink. When they came, he said to his barber, “Take my words to the simsapa grove and tell the mendicant Gautama, ‘Once daytime has arrived, you ought to know it’s time.’"'
     - taishoref: '0113a18'
       content: 'His barber accepted and performed his instructions. He went to the Buddha and bowed at the Bhagavan’s feet. “Once the day has come, you ought to know that its time.”'
   - paragraphs:
     - taishoref: '0113a19'
       content: 'The Bhagavan then put on his robe and took his bown to the sala grove along with his 1,250 disciples.'
     - taishoref: '0113a21'
-      content: 'The barber followed the Bhagavan by his right side, saluted him with his palms together, and said, “That brahmin Lohitya had this wrong view arise not far away when he left the Buddha: ’“Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn’t teach it for other people. Knowing it themselves, they desist from giving teachings to others. It’s like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!”’ May the Bhagavan remove his evil view.”'
+      content: 'The barber followed the Bhagavan by his right side, saluted him with his palms together, and said, “That brahmin Lohitya had this wrong view arise not far away when he left the Buddha: ‘Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn’t teach it for other people. Knowing it themselves, they desist from giving teachings to others. It’s like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!’ May the Bhagavan remove his evil view.”'
     - taishoref: '0113a26'
       content: 'The Buddha told the barber, “This is only a minor matter that’s easily changed.”'
   - paragraphs:
@@ -84,14 +84,14 @@ sections:
     - taishoref: '0113c28'
       content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
     - taishoref: '0113c29'
-      content: 'He’s born to a bad <span class="taishoref">[114a]</span> destiny.”'
+      content: '“He’s born to a bad <span class="taishoref">[114a]</span> destiny.”'
   - paragraphs:
     - taishoref: '0114a01'
-      content: '"Lohitya, he’s like a man who says to King Prasenajit, ’The country belongs to the king. The wealth in it is entirely for the king’s own use. Don’t share it with anyone else!’ How is it, Lohitya? If he applied that person’s words, would the king end the sharing of it with other people?"'
+      content: '“Lohitya, he’s like a man who says to King Prasenajit, ’The country belongs to the king. The wealth in it is entirely for the king’s own use. Don’t share it with anyone else!’ How is it, Lohitya? If he applied that person’s words, would the king end the sharing of it with other people?”'
     - taishoref: '0114a03'
       content: '“He would stop it.”'
     - taishoref: '0114a04'
-      content: 'To stop sharing with others: Is that a wholesome thought or an unwholesome thought?'
+      content: '“To stop sharing with others: Is that a wholesome thought or an unwholesome thought?”'
     - taishoref: '0114a05'
       content: '“An unwholesome thought.”'
     - taishoref: '0114a05'
@@ -100,9 +100,9 @@ sections:
       content: '“He’ll fall to an bad destiny.”'
   - paragraphs:
     - taishoref: '0114a06'
-      content: '"Lohitya, he’s likewise, someone who hears the Dharma and would attain four fruits of a mendicant. Suppose someone prohibits it by saying, ’Don’t teach the Dharma.’ If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
+      content: '“Lohitya, he’s likewise, someone who hears the Dharma and would attain four fruits of a mendicant. Suppose someone prohibits it by saying, ’Don’t teach the Dharma.’ If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
     - taishoref: '0114a08'
-      content: 'He won’t attain it.”'
+      content: '“He won’t attain it.”'
     - taishoref: '0114a09'
       content: '“If he doesn’t gain these fruits, does he attain birth in heaven?”'
     - taishoref: '0114a09'
@@ -132,7 +132,7 @@ sections:
     - taishoref: '0114a19'
       content: '“Lohitya, it’s likewise for someone who hears the Dharma who would attain the four fruits of a mendicant. Suppose someone says, ‘Don’t teach the Dharma.’ If those words are applied, that person wouldn’t hear the Dharma and attain its fruit, would he?”'
     - taishoref: '0114a21'
-      content: 'He wouldn’t attain them.”'
+      content: '“He wouldn’t attain them.”'
     - taishoref: '0114a22'
       content: '“If he doesn’t gain these fruits, does he attain birth in heaven?”'
     - taishoref: '0114a22'
