--- a/_data/translation/DA_29_ch_Lohitya.yaml
+++ b/_data/translation/DA_29_ch_Lohitya.yaml
@@ -7,13 +7,13 @@ sections:
       content: '如是我聞：一時，佛在拘薩羅國<sup class="noteref">1</sup>人間遊行，與大比丘眾千二百五十人俱，往詣娑<sup class="noteref">2</sup>羅婆提婆羅門村北尸舍婆林中止宿。'
       notes:
         - content: '羅＋（國）【宋】【元】【明】. 國 is added to this transliteration elsewhere in <em>DA</em>, so I’ve emended the Taisho for consistency.'
-        - content: '婆羅婆提＝娑羅婆提【宋】【明】 There was confusion with this obscure placename transliteration, evidenced by the inconsistency in this sutra, but the majority of older readings give 娑, which supports the reading of Sālavatī. 婆 would yield Valavatī or Balavatī.'
+        - content: '婆羅婆提＝娑羅婆提【宋】【明】 There was confusion regarding the transliterations in this sutra. 娑 appears to have been replaced with 婆 in both Sālavatī and śāla. I’ve emended the text to read Sālavatī and śāla.'
   - paragraphs:
     - taishoref: '0112c23'
-      content: '時，有婆羅門，名曰露遮，住[＊]婆羅林中，其村豐樂，人民熾盛，[14]波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世[15]已來父母真正，不為他人之所輕毀，異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、[16]瞻候吉凶、祭祀儀禮。'
+      content: '時，有婆羅門，名曰露遮，住娑羅林中，其村豐樂，人民熾盛，[14]波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世[15]已來父母真正，不為他人之所輕毀，異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、[16]瞻候吉凶、祭祀儀禮。'
   - paragraphs:
     - taishoref: '~0112c23'
-      content: '聞沙門瞿曇釋種子出家成道，於拘薩羅國人間遊行，至尸舍[＊]婆林中，有大名稱，流聞天下，如來、至真、等正覺，十號具足，於諸天、世人、魔、若魔天、沙門、婆羅門眾中自身作證，與他說法，上中下善，義味具足，梵行清淨。「如此真人，宜往覲現，我今寧可往共相見。」'
+      content: '聞沙門瞿曇釋種子出家成道，於拘薩羅國人間遊行，至尸舍娑林中，有大名稱，流聞天下，如來、至真、等正覺，十號具足，於諸天、世人、魔、若魔天、沙門、婆羅門眾中自身作證，與他說法，上中下善，義味具足，梵行清淨。「如此真人，宜往覲現，我今寧可往共相見。」'
   - paragraphs:
     - taishoref: '0113a06'
       content: '時，婆羅門即出彼村，詣尸舍婆林中，至世尊所，問訊已，一面坐。佛為說法，示教利喜，婆羅門聞法已，白佛言：「唯願世尊及諸大眾明受我請。」'
@@ -24,12 +24,12 @@ sections:
       content: '彼婆羅門見佛默然，知已許可，即從坐起，遶佛而去。去佛不遠，便起惡見言：「諸沙門、婆羅門多知善法，多所證成，不應為他人說，但自知，休與他說為。譬如有人壞故獄已，更造新獄，斯是貪惡不善法耳。」'
   - paragraphs:
     - taishoref: '0113a14'
-      content: '時，婆羅門還至[＊]婆羅林已，即於其夜具辦種種餚饍飲食。時到，語剃頭師言：「汝持我聲，[1]詣尸舍[＊]婆林中，白沙門瞿曇：『日時已到，宜知是[2]時。』」'
+      content: '時，婆羅門還至娑羅林已，即於其夜具辦種種餚饍飲食。時到，語剃頭師言：「汝持我聲，[1]詣尸舍娑林中，白沙門瞿曇：『日時已到，宜知是[2]時。』」'
     - taishoref: '0113a18'
       content: 剃頭師受教即[3]行，往到佛所，禮世尊足白：「時已到，宜知[4]是時。」
   - paragraphs:
     - taishoref: '0113a19'
-      content: '爾時，世尊即著衣持鉢，從諸弟子千二百五十人俱，詣[＊]婆羅林。'
+      content: '爾時，世尊即著衣持鉢，從諸弟子千二百五十人俱，詣娑羅林。'
     - taishoref: '0113a21'
       content: '剃頭師侍從世尊，偏露右臂，長跪叉手，白佛言：「彼露遮婆羅門去佛不遠，生惡見言：『諸有沙門、婆羅門多知善法，多所證者，不應為他人說，但自知，休與他說為。譬如有人壞故獄已，更造新獄，斯是貪惡不善法耳。』唯願世尊除其惡見。」'
     - taishoref: '0113a26'
